# travel-ruter

./: .coveragerc  .dockerignore  .env.example  .gitignore  .mcp.json  AUDIT_REPORT.md  Dockerfile  EXPORT_ANALYSIS_INDEX.md  EXPORT_FEATURE_SUMMARY.md  EXPORT_PIPELINE_ANALYSIS.md  EXPORT_PIPELINE_DIAGRAM.txt  EXPORT_PIPELINE_QUICK_REF.txt  LICENSE  README.md  TRAVEL_BRIDGE.md  TRIP_DUPLICATION_FEATURE.md  alembic.ini  commit_msg.txt  dev.sh  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  package-lock.json  pytest.ini  requirements.txt  setup_dev.sh  start.sh  test_duplication.py  travel_ruter_tasks.md
.claude/: EXPORT_WRITER_ROUTE_ANALYSIS.md  QUICK_REFERENCE.txt
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: env.py
app/: main.py
backend/: .env.example  README.md  main.py  pyproject.toml
docs/: architecture.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
mcp_server/: Dockerfile  __init__.py  __main__.py  auth.py  config.py  context.py  rate_limit.py  server.py
orchestrator/: .env.example  Dockerfile  agent.py  config.py  config_voice.py  main.py  requirements.txt  routes.py  schemas.py  session.py
tests/: test_google_maps_export.py  test_route_calculation.py  test_routing.py  test_voting.py
travel-ruter-mcp/: README.md  package-lock.json  package.json
(+546 files in other folders)
